test_src/compiler_errors/types/arithmetic/IncrementBoolError1.b
class IncrementBoolError1 {
    void test() {
        var value = true;
        println(value++);
    }
}
